force-app/main/default/objects/leankor__Preference__c/leankor__Preference__c.object-meta.xml
<CustomObject>
    <description>Every board in the leankor system (ValueStream) can have one or more Preference records which defines a set of preferred behaviors for a particular User of that board.  There should only ever be one Preference record per User per ValueStream.</description>
    <label>Preference</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>