force-app/main/default/objects/leankor__Preference__c/fields/leankor__CardPastDueDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__CardPastDueDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CardPastDueDate</label>
    <type>Checkbox</type>
</CustomField>