force-app/main/default/objects/leankor__Preference__c/fields/leankor__DerivedFrom__c.field-meta.xml
<CustomField>
    <fullName>leankor__DerivedFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DerivedFrom</label>
    <referenceTo>leankor__Preference__c</referenceTo>
    <relationshipLabel>Preferences</relationshipLabel>
    <relationshipName>Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>