force-app/main/default/objects/leankor__Preference__c/fields/leankor__FollowOnChatter__c.field-meta.xml
<CustomField>
    <fullName>leankor__FollowOnChatter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FollowOnChatter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>