force-app/main/default/objects/leankor__Preference__c/fields/leankor__GanttDividerSize__c.field-meta.xml
<CustomField>
    <fullName>leankor__GanttDividerSize__c</fullName>
    <description>Hold Gantt Divider Size</description>
    <label>Gantt Divider Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>