force-app/main/default/objects/leankor__Preference__c/fields/leankor__Moved__c.field-meta.xml
<CustomField>
    <fullName>leankor__Moved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moved</label>
    <type>Checkbox</type>
</CustomField>