force-app/main/default/objects/leankor__Preference__c/fields/leankor__SubscribeToCard__c.field-meta.xml
<CustomField>
    <fullName>leankor__SubscribeToCard__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SubscribeToCard</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>