force-app/main/default/objects/leankor__Preference__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Preferences</relationshipLabel>
    <relationshipName>Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>